Prototype with textarea instead of span

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <div><label>specific volume</label><span data-bind="text: '=' + v()" ></span></div>
       <div><label>enthalpy</label><span data-bind="text: '=' + h()"></span></div>
       <div><label>partial pressure</label><span data-bind="text: '=' + pw()" ></span></div>
-      <div><label>dew point temp</label><span data-bind="text: '=' + tdp()" ></span></div>
+      <div><label>dew point temp</label></div>
+      <div> <textarea style="width:90%" rows="10" data-bind="value: '=' + tdp()" ></textarea> </div>
 
   </body>
 </html>
