--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <title>Psychrometrics Excel Compiler</title>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js'></script>
     <script type='text/javascript' src='psy.js'></script>
+
+    <style>
+        .property-row {
+            margin-top: 1em;
+            margin-bottom: 1em;
+        }
+
+        body {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        .formula {
+            font-family: monospace
+        }
+
+    </style>
+
+
   </head>
   <body>
 
@@ -15,19 +34,49 @@
 
       <h1>Dry Bulb and Relative Humidity</h1>
 
-      <div><input data-bind="textInput: drybulb"/><label>Dry Bulb Cell</label></div>
-      <div><input data-bind="textInput: rh"/><label>Relative Humidity Cell</label></div>
-      <div><label>pws in cell?</label><input type="checkbox" data-bind="checked: pws_use_cell" /> </div>
-      <div><label>pws</label><span data-bind="text: '=' + pws()"></span></div>
-      <div><label>ω in cell?</label><input type="checkbox" data-bind="checked: w_use_cell" /> </div>
-      <div><label>ω</label><span data-bind="text: '=' + w()"></span></div>
-      <div><label>specific volume</label><span data-bind="text: '=' + v()" ></span></div>
-      <div><label>enthalpy</label><span data-bind="text: '=' + h()"></span></div>
-      <div><label>partial pressure</label><span data-bind="text: '=' + pw()" ></span></div>
-      <div><label>dew point temp</label></div>
-      <div> <textarea style="width:90%" rows="10" data-bind="value: '=' + tdp()" ></textarea> </div>
-      <div><label>wet point temp</label></div>
-      <div><textarea style="width:90%" rows="10" data-bind="value: '=' + twb()" ></textarea></div>
+      <div><label>Dry Bulb Cell</label><input data-bind="textInput: drybulb"/></div>
+      <div><label>Relative Humidity Cell</label><input data-bind="textInput: rh"/></div>
+
+      <div class="property-row">
+          <div><label>pws in cell?</label><input type="checkbox" data-bind="checked: pws_use_cell" /> </div>
+          <div><label>pws</label><span class="formula" data-bind="text: '=' + pws()"></span></div>
+      </div>
+
+      <div class="property-row">
+          <div><label>ω in cell?</label><input type="checkbox" data-bind="checked: w_use_cell" /> </div>
+          <div><label>ω</label><span class="formula" data-bind="text: '=' + w()"></span></div>
+      </div>
+
+      <div class="property-row">
+          <div><label>specific volume</label><span class="formula" data-bind="text: '=' + v()" ></span></div>
+      </div>
+
+      <div class="property-row">
+          <div><label>enthalpy</label><span class="formula" data-bind="text: '=' + h()"></span></div>
+      </div>
+
+      <div class="property-row">
+          <div><label>partial pressure</label><span class="formula" data-bind="text: '=' + pw()" ></span></div>
+      </div>
+
+      <div class="property-row">
+          <div class="property-row"><label>dew point temp</label></div>
+          <div> <textarea style="width:90%" rows="10" data-bind="value: '=' + tdp()" ></textarea> </div>
+      </div>
+
+      <div class="property-row">
+          <div><label>wet bulb temp</label></div>
+          <p>If you're looking to calculate wet bulb temperature for many states, basic Excel is not going to
+          be the best option. You're really going to want an actual programming language for that.
+          </p>
+      </div>
+
+
+      <h1>Dry Bulb and Dew Point Temperature</h1>
+
+      <div> <label> Dry Bulb Cell </label> <input />  </div>
+      <div> <label>Dew Point Cell</label> <input />  </div>
+
 
   </body>
 </html>
