--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div><label>enthalpy</label><span class="formula" data-bind="text: '=' + h()"></span></div>
       </div>
 
-
+      <div data-bind="visible: !pws.use_cell()"><span>Are you sure you don't want to store pws in a cell?</span></div>
       <div class="property-row">
           <div><label>dew point temperature</label><span class="formula" data-bind="text: '=' + tdp()"></span></div>
       </div>
