Add link, back to top buttons

--- a/index-base.html
+++ b/index-base.html
@@ -46,24 +46,31 @@
             text-align: center;
         }
 
+        .back-to-top {
+            font-size: 0.4em;
+        }
+
     </style>
 </head>
 
 <body>
 
     <div id="header-context">
-        <h1>What's the Point of this Page?</h1> <p>The point is this. Implementing portable, add-in functionality to spreadsheets (looking at you Excel) is a pain.
-        So much time is wasted recreating these formulas in spreadsheets and implementing them in other programming
-        languages. This page
-        allows you to dynamically adjust input spreadsheet cells or variable names and get the formulas you need. Never
-        worry about typing in those
-        psychrometric constants again. Just modify the inputs for your particular spreadsheet and copy/paste the formula
-        in.</p>
+        <h1>What's the Point of this Page?</h1>
+        <p>
+        The point is this. Implementing portable, add-in functionality to spreadsheets (looking at you Excel) is a pain.
+        So much time is wasted recreating these formulas in spreadsheets and implementing them in other programming languages.
+        This page allows you to dynamically adjust input spreadsheet cells or variable names
+        and get the formulas you need. Never worry about typing in those psychrometric constants again.
+        Just modify the inputs for your particular spreadsheet and copy/paste the formula in.
+        </p>
 
         <p>Apologies to the rest of the world - I'll get to implementing SI units at some point.</p>
 
-        <p>If you like this and want to help it spread, give it a star on <a href="https://github.com/mitchpaulus/psychrometric-excel-compiler">GitHub</a>!  Also check out:
+        <p>If you like this and want to help it spread, give it a star on <a href="https://github.com/mitchpaulus/psychrometric-excel-compiler">GitHub</a>!
+        Also check out:
         <ul>
+            <li><a href="https://neobem.io">Neobem - Programming language for generating EnergyPlus and DOE-2 input files</a></li>
             <li><a href="https://psychrochart.com">psychrochart.com - Online dynamic psychrometric chart</a></li>
             <li><a href="https://mitchellt.com">mitchellt.com - personal homepage</a> </li>
         </ul>
@@ -81,9 +88,7 @@
 
 
     </div>
-
-
-            <h1 id="dry-bulb-relative-humidity">Dry Bulb and Relative Humidity</h1>
+    <h1 id="dry-bulb-relative-humidity">Dry Bulb and Relative Humidity <a href="#header-context" class="back-to-top"> Back to top</a></h1>
 
             <div class="original-input-grid-container">
                 <label>Dry Bulb Cell (°F)</label><input data-bind="textInput: t_rh.drybulb" />
@@ -143,7 +148,7 @@
             </div>
 
 
-            <h1 id="dry-bulb-dew-point">Dry Bulb and Dew Point Temperature</h1>
+            <h1 id="dry-bulb-dew-point">Dry Bulb and Dew Point Temperature <a href="#header-context" class="back-to-top"> Back to top</a></h1>
 
             <div class="original-input-grid-container">
                 <label>Dry Bulb Cell (°F)</label> <input data-bind="textInput: t_tdp.drybulb" />
@@ -202,7 +207,7 @@
                 </p>
             </div>
 
-            <h1 id="dry-bulb-wet-bulb">Dry Bulb and Wet Bulb Temperature</h1>
+            <h1 id="dry-bulb-wet-bulb">Dry Bulb and Wet Bulb Temperature <a href="#header-context" class="back-to-top"> Back to top</a></h1>
 
             <div class="original-input-grid-container">
                 <label>Dry Bulb Cell (°F)</label> <input data-bind="textInput: t_twb.drybulb" />
